<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    tools:context=".firstscreen.FirstScreenFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/tvValuePercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvValuePercent"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:progressDrawable="@drawable/gradient_progress"
        tools:progress="60"/>

    <TextView
        android:id="@+id/tvLottieAnimation"
        android:text="@string/lottieAnimation"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress" />

    <LinearLayout
        android:id="@+id/layoutLottie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLottieAnimation"
        android:orientation="horizontal">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_main"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="7"
            android:visibility="gone"
            app:lottie_autoPlay="false"
            app:lottie_fileName="fight_coronavirus.json"
            app:lottie_loop="false"
            app:lottie_speed="1" />


        <ImageView
            android:id="@+id/staticImageView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="7"
            android:contentDescription="@string/app_name"
            android:src="@drawable/staticjpeg"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/start"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/start_anim"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"></Button>

            <Button
                android:id="@+id/stop"
                android:layout_width="100dp"

                android:layout_height="wrap_content"
                android:text="@string/stop_anim"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <Button
                android:id="@+id/hide_show"
                android:layout_width="100dp"

                android:layout_height="wrap_content"
                android:text="@string/hide_show_anim"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"></Button>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/showCustomAlert"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutLottie"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/show_custom_view"></Button>

    <Button
        android:id="@+id/toSecondScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/goToSecondScreen">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>