<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".secondscreen.SecondScreenFragment">


    <ImageButton
        android:id="@+id/toFirstScreenFragment"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/backScreen"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>


    <TextView
        android:id="@+id/tvRandomValue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/randomValue1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toFirstScreenFragment"></TextView>

    <TextView
        android:id="@+id/tvValueProgress1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toFirstScreenFragment"></TextView>

    <ProgressBar xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/progress1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRandomValue1"
        tools:progress="22"></ProgressBar>


    <TextView
        android:id="@+id/tvRandomValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/randomValue2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress1"></TextView>

    <TextView
        android:id="@+id/tvValueProgress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress1"></TextView>

    <ProgressBar xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/progress2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRandomValue2"
        tools:progress="22"></ProgressBar>


    <Button
        android:id="@+id/randomizeValues"
        android:text="@string/randomizeValues"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress2"
        ></Button>
    <LinearLayout
        android:id="@+id/layoutClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomizeValues">

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/layoutHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hours"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"></TextView>
        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/layoutMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="02"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Minutes"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"></TextView>

        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/layoutSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="58"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Seconds"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"></TextView>

        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>



    <ProgressBar
        android:id="@+id/progressBarRaitings"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        style="@android:style/Widget.ProgressBar.Large"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRaitings"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>